--- a/LAB3/Makefile
+++ b/LAB3/Makefile
@@ -7,14 +7,20 @@ CPPFLAGS= -c -g -Iinc -Wall -pedantic -std=c++11
 __start__: lab3
 	./lab3
 
-lab3: obj/main.o obj/Queue.o obj/Stack.o
-	g++ -Wall -pedantic -o lab3 obj/main.o obj/Stack.o obj/Queue.o 
+lab3: obj/main.o obj/Queue.o obj/Stack.o  obj/Node.o obj/List.o
+	g++ -Wall -pedantic -o lab3 obj/main.o obj/Stack.o obj/Queue.o  obj/Node.o obj/List.o
 
 obj/main.o: src/main.cpp     
 	g++ ${CPPFLAGS} -o obj/main.o src/main.cpp 
 
 obj/Queue.o: src/Queue.cpp inc/Queue.hh
 	g++ ${CPPFLAGS} -o obj/Queue.o src/Queue.cpp
+
+obj/Node.o: src/Node.cpp inc/Node.hh
+	g++ ${CPPFLAGS} -o obj/Node.o src/Node.cpp
+
+obj/List.o: src/List.cpp inc/List.hh
+	g++ ${CPPFLAGS} -o obj/List.o src/List.cpp
 
 obj/Stack.o: src/Stack.cpp inc/Stack.hh
 	g++ ${CPPFLAGS} -o obj/Stack.o src/Stack.cpp
