--- a/LAB6/Makefile
+++ b/LAB6/Makefile
@@ -4,22 +4,26 @@ CC := g++ # This is the main compiler
 SRCDIR := src
 OBJECTDIR := obj
 HEADERDIR := inc
-TESTDIR := obj/test
 TARGET := lab6
- 
+
 SRCEXT := cpp
 HEADEREXT := hh
 SOURCES := $(shell find $(SRCDIR) -type f -name *.$(SRCEXT))
 OBJECTS := $(patsubst $(SRCDIR)/%,$(OBJECTDIR)/%,$(SOURCES:.$(SRCEXT)=.o))
+
+
+# objects for unit_test program
+TEST_SRCEXT := cxx
 OBJECTS2 := $(patsubst $(OBJECTDIR)/main.o, , $(OBJECTS) )
+TEST_SOURCES := $(shell find $(SRCDIR) -type f -name *.$(TEST_SRCEXT))
+TEST_OBJECTS := $(patsubst $(SRCDIR)/%,$(OBJECTDIR)/%,$(TEST_SOURCES:.$(TEST_SRCEXT)=.o))
 
-
-CFLAGS := -g  -Wall -pedantic -std=c++11
-LIB := -lboost_unit_test_framework 
+# options
+CFLAGS :=  -Wall -pedantic -std=c++11
+LIB := 
+LIBT := -L -lboost_unit_test_framework 
 INC := -I $(HEADERDIR)
 
-_start_: tester
-	./tester --log_level=test_suite
 
 $(TARGET): $(OBJECTS) 
 	@echo " Linking...";
@@ -29,12 +33,16 @@ $(OBJECTDIR)/%.o: $(SRCDIR)/%.$(SRCEXT)
 	@mkdir -p $(OBJECTDIR)
 	@echo " $(CC) $(CFLAGS) $(INC) -c -o $@ $<"; $(CC) $(CFLAGS) $(INC) -c -o $@ $<
 
+$(OBJECTDIR)/%.o: $(SRCDIR)/%.$(TEST_SRCEXT)
+	@echo " $(CC) $(CFLAGS) $(INC) -c -o $@ $<"; $(CC) $(CFLAGS) $(INC) -c -o $@ $<
+
 clean:
 	@echo " Cleaning..."; 
 	@echo " $(RM) -r $(OBJECTDIR) $(TARGET) tester"; $(RM) -r $(OBJECTDIR) $(TARGET) tester
 
 # Tests
-tester: $(OBJECTS2)
-	$(CC) $(CFLAGS) $(OBJECTS2) test/tester.cpp $(INC) $(LIB) -o tester
+tester: $(OBJECTS2) $(TEST_OBJECTS)
+	$(CC) $(CFLAGS) $(OBJECTS2) $(TEST_OBJECTS) test/tester.cpp $(INC) $(LIBT) -o tester
+	@./tester --log_level=test_suite
 
 .PHONY: clean
